--- a/News App/src/App.css
+++ b/News App/src/App.css
@@ -1,29 +1,40 @@
 .news {
     width: 22%;
-    height: 200px;
+    padding: 20px;
     background-color: lightgray;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    border-radius:5px;
 }
 
 .news-articles {
     width: 100%;
     padding: 30px 5%;
-    background-color:red;
+    background-color: red;
     display: flex;
     column-gap: 4%;
 }
 
-.header{
+.header {
     width: 100%;
     padding: 20px 5%;
     display: flex;
     justify-content: space-between;
 }
 
-input{
+input {
     width: 20%;
     padding: 10px;
     font-size: 17px;
     border-radius: 5px;
     outline: none;
     border: 1px solid grey;
+}
+
+.news-img {
+    width: 100%;
+    height: 200px;
+    background-color: blue;
+    border-radius:5px;
 }
