--- a/News App/src/App.css
+++ b/News App/src/App.css
@@ -1,18 +1,20 @@
 .news {
     width: 22%;
     padding: 20px;
-    background-color: lightgray;
+    background-color: white;
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
+    row-gap: 12px;
     border-radius:5px;
 }
 
 .news-articles {
     width: 100%;
     padding: 30px 5%;
-    background-color: red;
+    background-color: #f2f2f2;
     display: flex;
+    flex-wrap: wrap;
+    row-gap: 20px;
     column-gap: 4%;
 }
 
@@ -23,18 +25,35 @@
     justify-content: space-between;
 }
 
+.header span{
+    color: red;
+}
+
 input {
-    width: 20%;
+    width: 15%;
     padding: 10px;
     font-size: 17px;
     border-radius: 5px;
     outline: none;
-    border: 1px solid grey;
+    border: 1px solid rgb(243, 3, 3);
 }
 
 .news-img {
     width: 100%;
     height: 200px;
-    background-color: blue;
     border-radius:5px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+}
+
+.news-img img{
+    width: 100%;
+}
+
+.source{
+    display: flex;
+    justify-content: space-between;
+    color:gray;
 }
