--- a/News App/src/App.css
+++ b/News App/src/App.css
@@ -1,17 +1,20 @@
 .news {
     width: 22%;
+    height: auto;
     padding: 20px;
-    background-color: white;
+    background-color: 	#cecece;
     display: flex;
     flex-direction: column;
     row-gap: 12px;
-    border-radius:5px;
+    border-radius: 5px;
+    
 }
 
 .news-articles {
     width: 100%;
     padding: 30px 5%;
-    background-color: #f2f2f2;
+    /* background-color: #f2f2f2; */
+    background-color: #f4f2c7;
     display: flex;
     flex-wrap: wrap;
     row-gap: 20px;
@@ -23,9 +26,10 @@
     padding: 20px 5%;
     display: flex;
     justify-content: space-between;
+    background-color: #f0e28e;
 }
 
-.header span{
+.header span {
     color: red;
 }
 
@@ -35,25 +39,29 @@ input {
     font-size: 17px;
     border-radius: 5px;
     outline: none;
-    border: 1px solid rgb(243, 3, 3);
+    border: 1px solid black;
 }
 
 .news-img {
     width: 100%;
     height: 200px;
-    border-radius:5px;
+    border-radius: 5px;
     overflow: hidden;
     display: flex;
     justify-content: center;
     /* align-items: center; */
 }
 
-.news-img img{
+.news-img img {
     width: 100%;
 }
 
-.source{
-    display: flex;
-    justify-content: space-between;
-    color:gray;
+.source {
+    /* display: flex;
+    justify-content:space-around; */
+    color:brown;
 }
+
+/* .author .src-name{
+    justify-content: space-evenly;
+} */
