--- a/News App/src/App.css
+++ b/News App/src/App.css
@@ -2,12 +2,12 @@
     width: 22%;
     height: auto;
     padding: 20px;
-    background-color: 	#cecece;
+    background-color: #cecece;
     display: flex;
     flex-direction: column;
     row-gap: 12px;
     border-radius: 5px;
-    
+
 }
 
 .news-articles {
@@ -25,13 +25,18 @@
     width: 100%;
     padding: 20px 5%;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: */
     background-color: #f0e28e;
 }
 
 .header span {
     color: red;
 }
+
+.header h1{
+    padding-right: 1000px;
+}
+
 
 input {
     width: 15%;
@@ -40,6 +45,8 @@ input {
     border-radius: 5px;
     outline: none;
     border: 1px solid black;
+    
+   
 }
 
 .news-img {
@@ -59,7 +66,16 @@ input {
 .source {
     /* display: flex;
     justify-content:space-around; */
-    color:brown;
+    color: brown;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+
+img {
+    width: 50px;
+    mix-blend-mode: multiply;
+    padding-right: 10px;
 }
 
 /* .author .src-name{
