--- a/News App/src/App.css
+++ b/News App/src/App.css
@@ -1,4 +1,105 @@
-.news {
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    height: 100vh;
+    padding: 6rem, 2rem;
+}
+
+.header {
+    width: 100%;
+    padding: 20px 5%;
+    display: flex;
+    background-color: #f0e28e;
+}
+
+.header span {
+    color: red;
+}
+
+.header h1 {
+    padding-right: 1000px;
+}
+
+.logo {
+    width: 50px;
+    mix-blend-mode: multiply;
+    padding-right: 10px;
+}
+
+input {
+    width: 15%;
+    padding: 10px;
+    font-size: 17px;
+    border-radius: 5px;
+    outline: none;
+    border: 1px solid black;
+}
+
+.articles {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 1.7rem;
+    width: 100%;
+    padding: 30px 5%;
+    background-color: #cecece;
+}
+
+.articles article {
+    max-width: 320px;
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+    cursor: pointer;
+    position: relative;
+    display: block;
+    transition: all 0.4s ease-in-out;
+    overflow: hidden;
+    border-radius: 16px;
+    box-shadow: rgba(0, 0, 3, 0.6) 0px 7px 29px 0px;
+    background-color: #d9d7ab;
+}
+
+.articles article h2 {
+    margin: 0 0 0.5rem 0;
+    font-size: 1.6rem;
+    transition: color 0.3s ease-out;
+}
+
+.articles article img {
+    max-width: 100%;
+    transform-origin: center;
+    transition: transform 0.4s ease-in-out;
+    height: 100%;
+    aspect-ratio: 16/9;
+    overflow: hidden;
+    object-fit: cover;
+}
+
+.article-preview {
+    padding: 1.5rem;
+}
+
+.articles figure {
+    width: 100%;
+    height: 14rem;
+    overflow: hidden;
+}
+
+article:hover{
+    transform: scale(1.04);
+}
+
+.source {
+    color: brown;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+
+/* .news {
     width: 22%;
     height: auto;
     padding: 20px;
@@ -13,7 +114,6 @@
 .news-articles {
     width: 100%;
     padding: 30px 5%;
-    /* background-color: #f2f2f2; */
     background-color: #f4f2c7;
     display: flex;
     flex-wrap: wrap;
@@ -25,7 +125,6 @@
     width: 100%;
     padding: 20px 5%;
     display: flex;
-    /* justify-content: */
     background-color: #f0e28e;
 }
 
@@ -56,7 +155,7 @@ input {
     overflow: hidden;
     display: flex;
     justify-content: center;
-    /* align-items: center; */
+    
 }
 
 .news-img img {
@@ -64,8 +163,6 @@ input {
 }
 
 .source {
-    /* display: flex;
-    justify-content:space-around; */
     color: brown;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -76,8 +173,4 @@ img {
     width: 50px;
     mix-blend-mode: multiply;
     padding-right: 10px;
-}
-
-/* .author .src-name{
-    justify-content: space-evenly;
 } */
