--- a/News App/src/App.css
+++ b/News App/src/App.css
@@ -11,31 +11,47 @@ body {
     width: 100%;
     padding: 20px 5%;
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     background-color: #f0e28e;
+}
+
+.header-logo {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    /* flex-direction: row; */
+}
+
+.inputs-fields {
+    display: flex;
+    justify-content: flex-end;
+    gap: 70px;
 }
 
 .header span {
     color: red;
 }
 
-.header h1 {
+/* .header h1 {
     padding-right: 1000px;
-}
+} */
 
 .logo {
-    width: 50px;
+    width: 60px;
     mix-blend-mode: multiply;
     padding-right: 10px;
 }
 
 input {
-    width: 15%;
+    width: 25%;
     padding: 10px;
     font-size: 17px;
     border-radius: 5px;
     outline: none;
     border: 1px solid black;
 }
+
 
 .articles {
     display: flex;
@@ -88,7 +104,7 @@ input {
     overflow: hidden;
 }
 
-article:hover{
+article:hover {
     transform: scale(1.04);
 }
 
