--- a/News App/src/App.css
+++ b/News App/src/App.css
@@ -14,6 +14,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     background-color: #f0e28e;
+    position: fixed;
 }
 
 .header-logo {
@@ -44,13 +45,17 @@ body {
 }
 
 input {
-    width: 25%;
+    width: 26%;
     padding: 10px;
     font-size: 17px;
     border-radius: 22px;
     outline: none;
-    border: 2px solid black;
+    border: 2px solid gray;
     text-align: center;
+}
+
+input:hover{
+    border-color: black;
 }
 
 
@@ -59,7 +64,6 @@ input {
     flex-wrap: wrap;
     width: 100%;
     gap: 1.7rem;
-    width: 100%;
     padding: 30px 5%;
     background-color: #cecece;
 }
