--- a/News App/src/App.css
+++ b/News App/src/App.css
@@ -25,7 +25,6 @@ body {
 .inputs-fields {
     display: flex;
     justify-content: flex-end;
-    gap: 70px;
 }
 
 .header span {
@@ -39,8 +38,9 @@ body {
 }
 
 input {
-    width: 26%;
-    padding: 10px;
+    /* width: 28%; */
+    width: fit-content;
+    padding: 5px;
     font-size: 17px;
     border-radius: 22px;
     outline: none;
@@ -113,3 +113,6 @@ article:hover {
     text-overflow: ellipsis;
 }
 
+.articles h3 {
+    text-align: center;
+}
